[docs] update system arch and read me

--- a/server/views/member/about.ejs
+++ b/server/views/member/about.ejs
@@ -110,7 +110,7 @@
               style="width: 100%; background-color: white;">
               <div class="py-2">
                 <svg
-                  style="left: 0px; top: 0px; width: 100%; height: 100%; display: block; min-width: 855px; min-height: 545px; background-image: none; background-color: transparent;">
+                  style="left: 0px; top: 0px; width: 100%; height: 100%; display: block; min-width: 880px; min-height: 545px; background-image: none; background-color: transparent;">
                   <defs>
                     <filter id="dropShadow">
                       <feGaussianBlur in="SourceAlpha" stdDeviation="1.7" result="blur"></feGaussianBlur>
@@ -124,13 +124,13 @@
                     <g></g>
                     <g>
                       <g transform="translate(0.5,0.5)" style="visibility: visible;">
-                        <path d="M 305 90 L 995 90 L 995 610 L 305 610 L 305 90 Z" fill="rgb(255, 255, 255)"
+                        <path d="M 305 90 L 1020 90 L 1020 610 L 305 610 L 305 90 Z" fill="rgb(255, 255, 255)"
                           stroke="none" pointer-events="all"></path>
-                        <path d="M 310 95 L 310 605 L 310 605 L 990 605 L 990 95 L 310 95" fill="none" stroke="none"
+                        <path d="M 310 95 L 310 605 L 310 605 L 1015 605 L 1015 95 L 310 95" fill="none" stroke="none"
                           pointer-events="all"></path>
-                        <path d="M 305 90 L 995 90 L 995 610 L 305 610 L 305 90 Z" fill="none" stroke="white"
+                        <path d="M 305 90 L 1020 90 L 1020 610 L 305 610 L 305 90 Z" fill="none" stroke="white"
                           stroke-miterlimit="10" pointer-events="stroke" visibility="hidden" stroke-width="9"></path>
-                        <path d="M 305 90 L 995 90 L 995 610 L 305 610 L 305 90 Z" fill="none" stroke="rgb(0, 0, 0)"
+                        <path d="M 305 90 L 1020 90 L 1020 610 L 305 610 L 305 90 Z" fill="none" stroke="rgb(0, 0, 0)"
                           stroke-miterlimit="10" pointer-events="all"></path>
                       </g>
                       <g transform="translate(0.5,0.5)" style="visibility: visible;">
@@ -322,9 +322,9 @@
                           preserveAspectRatio="none"></image>
                       </g>
                       <g transform="translate(0.5,0.5)" style="visibility: visible;">
-                        <rect x="866.49" y="484" width="120" height="110" fill="none" stroke="white"
+                        <rect x="866.49" y="484" width="143.51" height="110" fill="none" stroke="white"
                           pointer-events="stroke" visibility="hidden" stroke-width="9"></rect>
-                        <rect x="866.49" y="484" width="120" height="110" fill="none" stroke="none"
+                        <rect x="866.49" y="484" width="143.51" height="110" fill="none" stroke="none"
                           pointer-events="all"></rect>
                       </g>
                       <g style="">
@@ -332,13 +332,15 @@
                           <foreignObject pointer-events="none" width="100%" height="100%"
                             style="overflow: visible; text-align: left;">
                             <div
-                              style="display: flex; align-items: unsafe center; justify-content: unsafe flex-start; width: 118px; height: 1px; padding-top: 539px; margin-left: 868px;">
+                              style="display: flex; align-items: unsafe center; justify-content: unsafe flex-start; width: 142px; height: 1px; padding-top: 539px; margin-left: 868px;">
                               <div data-drawio-colors="color: rgb(0, 0, 0); "
                                 style="box-sizing: border-box; font-size: 0px; text-align: left;">
                                 <div
                                   style="display: inline-block; font-size: 12px; font-family: Verdana; color: rgb(0, 0, 0); line-height: 1.2; pointer-events: all; white-space: normal; overflow-wrap: normal;">
-                                  &nbsp;file / folder
-                                  name<br>&nbsp;is_delete<br>---------------------<br>&nbsp;version<br>&nbsp;size<br>&nbsp;is_current
+                                  <font data-font-src="https://fonts.googleapis.com/css?family=Open+Sans"
+                                    face="Consolas">&nbsp;file / folder
+                                    name<br>&nbsp;is_delete<br>--------------------<br>&nbsp;version<br>&nbsp;size<br>&nbsp;is_current
+                                  </font>
                                 </div>
                               </div>
                             </div>
