[chore] add reminder in register page

--- a/server/views/visitor/register.ejs
+++ b/server/views/visitor/register.ejs
@@ -170,6 +170,9 @@
                     <label for="email" class="form-label">Email<span class="text-danger">*</span></label>
                     <input type="email" class="form-control" name="email" id="email" required placeholder="Enter Email"
                       pattern="^[\-\w\.]+@([\-\w]+\.)+[\-\w]{2,4}$" autocomplete="off">
+                    <div class="pwd-note px-2 mt-1">
+                      A mail will be sent to your mailbox for verification.
+                    </div>
                   </div>
 
                   <div class="mb-3">
