--- a/server/views/visitor/about.ejs
+++ b/server/views/visitor/about.ejs
@@ -90,17 +90,17 @@
               <ul>
                 <li>Backend server built with Node.js Express</li>
                 <li>Frontend created with HTML, CSS, Javascript, jQuery, Bootstrap</li>
-                <li>Session-Cookie Authentication</li>
-                <li>Realtime update by Socket.IO</li>
-                <li>Redis adapter for Socket.IO servers scaling</li>
-                <li>MySQL for saving metadata</li>
                 <li>AWS S3 for file storage</li>
                 <li>AWS Lambda for file archiving</li>
+                <li>MySQL for saving metadata, including version information</li>
+                <li>Realtime update by Socket.IO</li>
                 <li>AWS EC2 hosting with Application Load Balancer for scalability</li>
+                <li>Redis adapter for Socket.IO servers scaling</li>
+                <li>Session-Cookie Authentication</li>
                 <li>Email confirmation by MailerSend*</li>
                 <li>SSL certification to enable HTTPS</li>
               </ul>
-              <p>*Registeration is not applicable when my send mail quota of MailerSend runs out</p>
+              <p>*Registeration will not be applicable when the send mail quota of MailerSend runs out</p>
             </div>
             <div class="about-items">
               <strong>System Architecture Diagram</strong>
