[chore] modify system structure chart to make it more clear

--- a/server/views/member/about.ejs
+++ b/server/views/member/about.ejs
@@ -110,7 +110,7 @@
               style="width: 100%; background-color: white;">
               <div class="py-2">
                 <svg
-                  style="left: 0px; top: 0px; width: 100%; height: 100%; display: block; min-width: 880px; min-height: 545px; background-image: none; background-color: transparent;">
+                  style="left: 0px; top: 0px; width: 100%; height: 100%; display: block; min-width: 870px; min-height: 545px; background-image: none; background-color: transparent;">
                   <defs>
                     <filter id="dropShadow">
                       <feGaussianBlur in="SourceAlpha" stdDeviation="1.7" result="blur"></feGaussianBlur>
@@ -124,13 +124,13 @@
                     <g></g>
                     <g>
                       <g transform="translate(0.5,0.5)" style="visibility: visible;">
-                        <path d="M 305 90 L 1020 90 L 1020 610 L 305 610 L 305 90 Z" fill="rgb(255, 255, 255)"
+                        <path d="M 290 90 L 1010 90 L 1010 610 L 290 610 L 290 90 Z" fill="rgb(255, 255, 255)"
                           stroke="none" pointer-events="all"></path>
-                        <path d="M 310 95 L 310 605 L 310 605 L 1015 605 L 1015 95 L 310 95" fill="none" stroke="none"
+                        <path d="M 295 95 L 295 605 L 295 605 L 1005 605 L 1005 95 L 295 95" fill="none" stroke="none"
                           pointer-events="all"></path>
-                        <path d="M 305 90 L 1020 90 L 1020 610 L 305 610 L 305 90 Z" fill="none" stroke="white"
+                        <path d="M 290 90 L 1010 90 L 1010 610 L 290 610 L 290 90 Z" fill="none" stroke="white"
                           stroke-miterlimit="10" pointer-events="stroke" visibility="hidden" stroke-width="9"></path>
-                        <path d="M 305 90 L 1020 90 L 1020 610 L 305 610 L 305 90 Z" fill="none" stroke="rgb(0, 0, 0)"
+                        <path d="M 290 90 L 1010 90 L 1010 610 L 290 610 L 290 90 Z" fill="none" stroke="rgb(0, 0, 0)"
                           stroke-miterlimit="10" pointer-events="all"></path>
                       </g>
                       <g transform="translate(0.5,0.5)" style="visibility: visible;">
@@ -158,9 +158,9 @@
                           stroke="rgb(0, 0, 0)" stroke-miterlimit="10" pointer-events="all"></path>
                       </g>
                       <g transform="translate(0.5,0.5)" style="visibility: visible;">
-                        <path d="M 544 324.5 L 544 160.5 L 618.63 160.5" fill="none" stroke="white"
+                        <path d="M 544 324.5 L 560 324.5 L 560 160.5 L 618.63 160.5" fill="none" stroke="white"
                           stroke-miterlimit="10" pointer-events="stroke" visibility="hidden" stroke-width="9"></path>
-                        <path d="M 544 324.5 L 544 160.5 L 618.63 160.5" fill="none" stroke="rgb(0, 0, 0)"
+                        <path d="M 544 324.5 L 560 324.5 L 560 160.5 L 618.63 160.5" fill="none" stroke="rgb(0, 0, 0)"
                           stroke-miterlimit="10" pointer-events="stroke"></path>
                         <path d="M 623.88 160.5 L 616.88 164 L 618.63 160.5 L 616.88 157 Z" fill="rgb(0, 0, 0)"
                           stroke="rgb(0, 0, 0)" stroke-miterlimit="10" pointer-events="all"></path>
@@ -187,6 +187,14 @@
                         <path
                           d="M 345.39 383.82 L 345.39 371.75 L 350.55 371.75 L 350.55 361.3 L 358.5 361.3 L 358.5 351.93 L 376.37 351.93 L 376.37 343.66 L 365.09 343.66 L 365.09 328.83 L 389.89 328.83 L 389.89 343.66 L 378.63 343.66 L 378.63 351.93 L 396.04 351.93 L 396.04 361.3 L 403.93 361.3 L 403.93 371.75 L 409.09 371.75 L 409.09 383.82 L 396.52 383.82 L 396.52 371.75 L 401.66 371.75 L 401.66 363.46 L 388.05 363.46 L 388.05 371.75 L 393.19 371.75 L 393.19 383.82 L 380.62 383.82 L 380.62 371.75 L 385.78 371.75 L 385.78 361.3 L 393.76 361.3 L 393.76 354.11 L 360.77 354.11 L 360.77 361.3 L 368.7 361.3 L 368.7 371.75 L 373.86 371.75 L 373.86 383.82 L 361.27 383.82 L 361.27 371.75 L 366.43 371.75 L 366.43 363.46 L 352.8 363.46 L 352.8 371.75 L 357.96 371.75 L 357.96 383.82 Z"
                           fill="#ffffff" stroke="none" pointer-events="all"></path>
+                      </g>
+                      <g transform="translate(0.5,0.5)" style="visibility: visible;">
+                        <path d="M 784 240 L 784 160.5 L 709.37 160.5" fill="none" stroke="white" stroke-miterlimit="10"
+                          pointer-events="stroke" visibility="hidden" stroke-width="9"></path>
+                        <path d="M 784 240 L 784 160.5 L 709.37 160.5" fill="none" stroke="rgb(0, 0, 0)"
+                          stroke-miterlimit="10" pointer-events="stroke"></path>
+                        <path d="M 704.12 160.5 L 711.12 157 L 709.37 160.5 L 711.12 164 Z" fill="rgb(0, 0, 0)"
+                          stroke="rgb(0, 0, 0)" stroke-miterlimit="10" pointer-events="all"></path>
                       </g>
                       <g transform="translate(0.5,0.5)" style="visibility: visible;">
                         <path d="M 745 240 L 823 240 L 823 318 L 745 318 Z"
@@ -227,19 +235,19 @@
                           fill="#232f3d" stroke="none" pointer-events="all"></path>
                       </g>
                       <g transform="translate(0.5,0.5)" style="visibility: visible;">
-                        <path d="M 703 160.5 L 784 160.5 L 784 233.63" fill="none" stroke="white" stroke-miterlimit="10"
-                          pointer-events="stroke" visibility="hidden" stroke-width="9"></path>
-                        <path d="M 703 160.5 L 784 160.5 L 784 233.63" fill="none" stroke="rgb(0, 0, 0)"
-                          stroke-miterlimit="10" pointer-events="stroke"></path>
-                        <path d="M 784 238.88 L 780.5 231.88 L 784 233.63 L 787.5 231.88 Z" fill="rgb(0, 0, 0)"
-                          stroke="rgb(0, 0, 0)" stroke-miterlimit="10" pointer-events="all"></path>
-                      </g>
-                      <g transform="translate(0.5,0.5)" style="visibility: visible;">
                         <path d="M 625 121.5 L 204 121.5 L 204 319.13" fill="none" stroke="white" stroke-miterlimit="10"
                           pointer-events="stroke" visibility="hidden" stroke-width="9"></path>
                         <path d="M 625 121.5 L 204 121.5 L 204 319.13" fill="none" stroke="rgb(0, 0, 0)"
                           stroke-miterlimit="10" stroke-dasharray="12 12" pointer-events="stroke"></path>
                         <path d="M 204 324.38 L 200.5 317.38 L 204 319.13 L 207.5 317.38 Z" fill="rgb(0, 0, 0)"
+                          stroke="rgb(0, 0, 0)" stroke-miterlimit="10" pointer-events="all"></path>
+                      </g>
+                      <g transform="translate(0.5,0.5)" style="visibility: visible;">
+                        <path d="M 703 121.5 L 882.12 121.5" fill="none" stroke="white" stroke-miterlimit="10"
+                          pointer-events="stroke" visibility="hidden" stroke-width="9"></path>
+                        <path d="M 703 121.5 L 882.12 121.5" fill="none" stroke="rgb(0, 0, 0)" stroke-miterlimit="10"
+                          pointer-events="stroke"></path>
+                        <path d="M 887.37 121.5 L 880.37 125 L 882.12 121.5 L 880.37 118 Z" fill="rgb(0, 0, 0)"
                           stroke="rgb(0, 0, 0)" stroke-miterlimit="10" pointer-events="all"></path>
                       </g>
                       <g transform="translate(0.5,0.5)" style="visibility: visible;">
@@ -315,9 +323,9 @@
                         </g>
                       </g>
                       <g style="visibility: visible;">
-                        <rect x="535" y="93" width="53" height="53" fill="#ffffff" stroke="none" pointer-events="all">
+                        <rect x="718" y="93" width="53" height="53" fill="#ffffff" stroke="none" pointer-events="all">
                         </rect>
-                        <image x="535" y="93" width="53" height="53"
+                        <image x="718" y="93" width="53" height="53"
                           xlink:href="https://cdn1.iconfinder.com/data/icons/hawcons/32/699821-icon-59-file-zip-128.png"
                           preserveAspectRatio="none"></image>
                       </g>
@@ -429,7 +437,7 @@
                                 style="box-sizing: border-box; font-size: 0px; text-align: center;">
                                 <div
                                   style="display: inline-block; font-size: 12px; font-family: Helvetica; color: rgb(0, 0, 0); line-height: 1.2; pointer-events: all; font-weight: bold; white-space: normal; overflow-wrap: normal;">
-                                  S3</div>
+                                  S3 (main)</div>
                               </div>
                             </div>
                           </foreignObject>
@@ -507,7 +515,7 @@
                         </g>
                       </g>
                       <g style="visibility: visible;">
-                        <image x="900" y="95" width="90" height="47.25"
+                        <image x="292" y="560.75" width="90" height="47.25"
                           xlink:href="https://a0.awsstatic.com/libra-css/images/logos/aws_logo_smile_1200x630.png"
                           preserveAspectRatio="none"></image>
                       </g>
@@ -545,6 +553,75 @@
                         <path
                           d="M 529.51 377.99 L 557.37 377.99 L 557.37 350.13 L 529.51 350.13 Z M 559.6 350.13 L 564.06 350.13 L 564.06 352.36 L 559.6 352.36 L 559.6 356.81 L 564.06 356.81 L 564.06 359.04 L 559.6 359.04 L 559.6 362.39 L 564.06 362.39 L 564.06 364.61 L 559.6 364.61 L 559.6 369.07 L 564.06 369.07 L 564.06 371.3 L 559.6 371.3 L 559.6 375.76 L 564.06 375.76 L 564.06 377.99 L 559.6 377.99 L 559.6 378.14 C 559.6 379.28 558.67 380.21 557.52 380.21 L 557.37 380.21 L 557.37 384.67 L 555.14 384.67 L 555.14 380.21 L 550.69 380.21 L 550.69 384.67 L 548.46 384.67 L 548.46 380.21 L 545.11 380.21 L 545.11 384.67 L 542.89 384.67 L 542.89 380.21 L 538.43 380.21 L 538.43 384.67 L 536.2 384.67 L 536.2 380.21 L 531.74 380.21 L 531.74 384.67 L 529.51 384.67 L 529.51 380.21 L 529.36 380.21 C 528.22 380.21 527.29 379.28 527.29 378.14 L 527.29 377.99 L 523.94 377.99 L 523.94 375.76 L 527.29 375.76 L 527.29 371.3 L 523.94 371.3 L 523.94 369.07 L 527.29 369.07 L 527.29 364.61 L 523.94 364.61 L 523.94 362.39 L 527.29 362.39 L 527.29 359.04 L 523.94 359.04 L 523.94 356.81 L 527.29 356.81 L 527.29 352.36 L 523.94 352.36 L 523.94 350.13 L 527.29 350.13 L 527.29 349.98 C 527.29 348.83 528.22 347.9 529.36 347.9 L 529.51 347.9 L 529.51 343.44 L 531.74 343.44 L 531.74 347.9 L 536.2 347.9 L 536.2 343.44 L 538.43 343.44 L 538.43 347.9 L 542.89 347.9 L 542.89 343.44 L 545.11 343.44 L 545.11 347.9 L 548.46 347.9 L 548.46 343.44 L 550.69 343.44 L 550.69 347.9 L 555.14 347.9 L 555.14 343.44 L 557.37 343.44 L 557.37 347.9 L 557.52 347.9 C 558.67 347.9 559.6 348.83 559.6 349.98 Z M 545.11 392.33 C 545.11 392.41 545.05 392.47 544.98 392.47 L 515.17 392.47 C 515.09 392.47 515.03 392.41 515.03 392.33 L 515.03 362.52 C 515.03 362.45 515.09 362.39 515.17 362.39 L 521.71 362.39 L 521.71 360.16 L 515.17 360.16 C 513.86 360.16 512.8 361.22 512.8 362.52 L 512.8 392.33 C 512.8 393.64 513.86 394.7 515.17 394.7 L 544.98 394.7 C 546.28 394.7 547.34 393.64 547.34 392.33 L 547.34 386.9 L 545.11 386.9 Z M 575.2 334.67 L 575.2 364.48 C 575.2 365.78 574.14 366.84 572.83 366.84 L 566.29 366.84 L 566.29 364.61 L 572.83 364.61 C 572.91 364.61 572.97 364.55 572.97 364.48 L 572.97 334.67 C 572.97 334.59 572.91 334.53 572.83 334.53 L 543.02 334.53 C 542.95 334.53 542.89 334.59 542.89 334.67 L 542.89 341.21 L 540.66 341.21 L 540.66 334.67 C 540.66 333.36 541.72 332.3 543.02 332.3 L 572.83 332.3 C 574.14 332.3 575.2 333.36 575.2 334.67 Z"
                           fill="#ffffff" stroke="none" pointer-events="all"></path>
+                      </g>
+                      <g transform="translate(0.5,0.5)" style="visibility: visible;">
+                        <path d="M 888.49 102 L 966.49 102 L 966.49 180 L 888.49 180 Z"
+                          fill="url(#mx-gradient-60a337-1-277116-1-s-0)" stroke="none" pointer-events="all"></path>
+                        <path
+                          d="M 950.77 144.22 L 951.2 141.21 C 955.15 143.57 955.2 144.55 955.2 144.58 C 955.19 144.58 954.52 145.14 950.77 144.22 Z M 948.61 143.62 C 941.79 141.56 932.29 137.2 928.45 135.39 C 928.45 135.37 928.45 135.36 928.45 135.34 C 928.45 133.86 927.25 132.66 925.77 132.66 C 924.3 132.66 923.1 133.86 923.1 135.34 C 923.1 136.82 924.3 138.02 925.77 138.02 C 926.42 138.02 927.01 137.78 927.47 137.39 C 932 139.53 941.42 143.82 948.29 145.85 L 945.57 165.03 C 945.56 165.08 945.56 165.13 945.56 165.18 C 945.56 166.87 938.09 169.97 925.88 169.97 C 913.54 169.97 905.98 166.87 905.98 165.18 C 905.98 165.13 905.98 165.08 905.97 165.03 L 900.3 123.57 C 905.21 126.95 915.78 128.74 925.88 128.74 C 935.97 128.74 946.52 126.96 951.45 123.59 Z M 899.7 119.25 C 899.78 117.78 908.2 112.03 925.88 112.03 C 943.56 112.03 951.99 117.78 952.07 119.25 L 952.07 119.75 C 951.1 123.04 940.18 126.51 925.88 126.51 C 911.56 126.51 900.64 123.02 899.7 119.73 Z M 954.3 119.27 C 954.3 115.41 943.23 109.8 925.88 109.8 C 908.54 109.8 897.47 115.41 897.47 119.27 L 897.57 120.11 L 903.76 165.27 C 903.9 170.32 917.37 172.2 925.88 172.2 C 936.43 172.2 947.64 169.77 947.79 165.27 L 950.46 146.44 C 951.94 146.8 953.17 146.98 954.15 146.98 C 955.47 146.98 956.36 146.66 956.9 146.01 C 957.34 145.49 957.51 144.85 957.38 144.16 C 957.1 142.62 955.26 140.96 951.54 138.83 L 954.18 120.16 Z"
+                          fill="#ffffff" stroke="none" pointer-events="all"></path>
+                      </g>
+                      <g transform="translate(0.5,0.5)" style="visibility: visible;">
+                        <rect x="877.49" y="180" width="100" height="30" fill="none" stroke="white"
+                          pointer-events="stroke" visibility="hidden" stroke-width="9"></rect>
+                        <rect x="877.49" y="180" width="100" height="30" fill="none" stroke="none" pointer-events="all">
+                        </rect>
+                      </g>
+                      <g style="">
+                        <g>
+                          <foreignObject pointer-events="none" width="100%" height="100%"
+                            style="overflow: visible; text-align: left;">
+                            <div
+                              style="display: flex; align-items: unsafe center; justify-content: unsafe center; width: 98px; height: 1px; padding-top: 195px; margin-left: 878px;">
+                              <div data-drawio-colors="color: rgb(0, 0, 0); "
+                                style="box-sizing: border-box; font-size: 0px; text-align: center;">
+                                <div
+                                  style="display: inline-block; font-size: 12px; font-family: Helvetica; color: rgb(0, 0, 0); line-height: 1.2; pointer-events: all; font-weight: bold; white-space: normal; overflow-wrap: normal;">
+                                  S3 (zip)</div>
+                              </div>
+                            </div>
+                          </foreignObject>
+                        </g>
+                      </g>
+                      <g transform="translate(0.5,0.5)" style="visibility: visible;">
+                        <rect x="490" y="111" width="90" height="20" fill="rgb(255, 255, 255)" stroke="none"
+                          pointer-events="all"></rect>
+                      </g>
+                      <g style="">
+                        <g>
+                          <foreignObject pointer-events="none" width="100%" height="100%"
+                            style="overflow: visible; text-align: left;">
+                            <div
+                              style="display: flex; align-items: unsafe center; justify-content: unsafe center; width: 88px; height: 1px; padding-top: 121px; margin-left: 491px;">
+                              <div data-drawio-colors="color: rgb(0, 0, 0); "
+                                style="box-sizing: border-box; font-size: 0px; text-align: center;">
+                                <div
+                                  style="display: inline-block; font-size: 12px; font-family: Helvetica; color: rgb(0, 0, 0); line-height: 1.2; pointer-events: all; white-space: normal; overflow-wrap: normal;">
+                                  presigned URL</div>
+                              </div>
+                            </div>
+                          </foreignObject>
+                        </g>
+                      </g>
+                      <g transform="translate(0.5,0.5)" style="visibility: visible;">
+                        <rect x="600" y="226" width="90" height="20" fill="rgb(255, 255, 255)" stroke="none"
+                          transform="rotate(15,645,236)" pointer-events="all"></rect>
+                      </g>
+                      <g style="">
+                        <g transform="rotate(15 645 236)">
+                          <foreignObject pointer-events="none" width="100%" height="100%"
+                            style="overflow: visible; text-align: left;">
+                            <div
+                              style="display: flex; align-items: unsafe center; justify-content: unsafe center; width: 88px; height: 1px; padding-top: 236px; margin-left: 601px;">
+                              <div data-drawio-colors="color: rgb(0, 0, 0); "
+                                style="box-sizing: border-box; font-size: 0px; text-align: center;">
+                                <div
+                                  style="display: inline-block; font-size: 12px; font-family: Helvetica; color: rgb(0, 0, 0); line-height: 1.2; pointer-events: all; white-space: normal; overflow-wrap: normal;">
+                                  presigned URL</div>
+                              </div>
+                            </div>
+                          </foreignObject>
+                        </g>
                       </g>
                     </g>
                     <g></g>
